# rs_llm

./: main.py  pyproject.toml
data/: director.tsv  result_director_claude_20260512.csv  result_director_claude_20260513.csv  writer.tsv
prompt/: __init__.py  crew_search.py  response_schema.json
