[project]
name = "rs-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.6.5",
    "anthropic>=0.101.0",
    "ddgs>=9.14.2",
    "dedent>=0.8.0",
    "deepseek>=1.0.0",
    "google-genai>=2.1.0",
    "openai>=2.36.0",
    "pandas>=3.0.3",
    "python-dotenv",
]
